# lqtile

./: .gitignore  flake.nix  pyproject.toml  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4m4ldb7rzl2s0wwasimg5wh15hjkq16h-source
src/lqtile/: __init__.py  bars.py  floating.py  scratchpad.py
src/lqtile/builder/: buttons.py  group.py  keys.py
src/lqtile/color/: contrast.py  convert.py  deref.py  match.py
src/lqtile/qbar/: context.py
src/lqtile/qmodule/: bluetooth.py  context.py
src/lqtile/settings/: default.py  fs.py  loader.py
src/lqtile/settings/bar/: __init__.py  model.py
src/lqtile/settings/color/: __init__.py  base16.py  iter.py  loader.py  model.py
src/lqtile/settings/extension/: model.py
src/lqtile/settings/font/: model.py
src/lqtile/settings/group/: loader.py
src/lqtile/settings/input/: loader.py
src/lqtile/wallpaper/: hyprpaper.py  manager.py  palette.py  readme.md  typedef.py  waypaper.py
tests/: conftest.py  test_deref.py
tests/anchor/: test_anchor.py  test_margin.py
tests/bar/: test_bar.py
tests/color/: test_contrast.py  test_convert.py  test_is.py
tests/data/theme/: bar.yaml  color.yaml  font.yaml  layout.yaml
tests/input/: test_input.py  test_key.py
tests/setting/: test_setting_loader.py
tests/theme/: readme.md  test_default_theme.py  test_deref_color.py  test_iter.py  test_theme_loader.py  test_theme_named_color.py
tests/wallpaper/: test_hyprpaper.py  test_palette.py  test_waypaper.py
(+2 files in other folders)
